--- a/files/index.html
+++ b/files/index.html
@@ -1,13 +1,13 @@
 <html>
   <head>
-    <title>Got Baby Demonstration</title>
+    <title>Cat Feeder Demonstration</title>
   </head>
   <body>
-    <h1>Got Baby,  Yep?</h1>
+    <h1>Feed the Cats, Yep?</h1>
     <h2>Watch via video or photo mode.</h2>
     <h2>Outputs: Video, Photos and Json.</h2>
     <img src="{{ url_for('video_feed') }}">
-    <img src="{{url_for ('static',filename='stillimg.jpg')}}"></img>    
+    <img src="{{url_for ('files',filename='stillimg.jpg')}}"></img>    
     
   </body>
 </html>
