--- a/files/index_video_feed.html
+++ b/files/index_video_feed.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <title>Got Baby Demonstration</title>
+    <title>Cat Feeder</title>
   </head>
   <body>
-    <h1>Got Baby  Yep?</h1>
+    <h1>Feed the cats,  Yep?</h1>
     <img src="{{ url_for('video_feed') }}">
     
   </body>
